load("@rules_cc//cc:defs.bzl", "cc_library")

INCLUDE_PREFIX = "cupano/utils"
ROCM_HIP_DEFINES = select({
    "@//:use_hip": [
        "USE_HIP",
        "__HIP_PLATFORM_AMD__",
    ],
    "//conditions:default": [],
})

cc_library(
    name = "utils",
    srcs = [
        "cudaBlendShow.cpp",
    ],
    hdrs = [
        "cudaBlendShow.h",
    ],
    defines = ROCM_HIP_DEFINES,
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-ltiff",
        "-lpng",
    ],
    visibility = ["//visibility:public"],
    deps = (
        [
            ":show_image",
            "@opencv_linux//:opencv",
        ]
        + select({
            "@//:use_hip": ["//src/cuda:cuda_blend_cuda_lib_hip"],
            "@//:use_vulkan": ["//src/cuda:cuda_blend_vulkan_lib"],
            "//conditions:default": ["//src/cuda:cuda_blend_cuda_lib"],
        })
    ),
)

cc_library(
    name = "gl_window",
    srcs = [
        "cudaGLWindow.cpp",
    ],
    hdrs = [
        "cudaGLWindow.h",
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-lglfw",
        "-lGLEW",
        "-lGL",
        "-I/usr/include",
    ],
    defines = ROCM_HIP_DEFINES,
    visibility = ["//visibility:public"],
    deps = (
      ["//src/gpu:gpu_runtime", "//src/pano:cuda_matrix"]
      + select({
        "@//:use_hip": [
          "@local_rocm//:rocm_sdk_core",
          "@local_rocm//:amdhip64",
        ],
        "@//:use_vulkan": [],
        "//conditions:default": ["@local_cuda//:cuda_runtime"],
      })
    ),
)

cc_library(
    name = "image_utils",
    srcs = [
        "imageUtils.cpp",
    ],
    hdrs = [
        "imageUtils.h",
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-lglfw",
        "-lGLEW",
        "-lGL",
    ],
    defines = ROCM_HIP_DEFINES,
    visibility = ["//visibility:public"],
    deps = (
      ["//src/gpu:gpu_runtime", ":gl_window", "//src/pano:cuda_matrix", "@opencv_linux//:opencv"]
      + select({
        "@//:use_hip": [
          "@local_rocm//:rocm_sdk_core",
          "@local_rocm//:amdhip64",
        ],
        "@//:use_vulkan": [],
        "//conditions:default": ["@local_cuda//:cuda_runtime"],
      })
    ),
)


cc_library(
    name = "show_image",
    srcs = [
        "showImage.cpp",
    ],
    hdrs = [
        "showImage.h",
    ],
    include_prefix = INCLUDE_PREFIX,
    linkopts = [
        "-lglfw",
        "-lGLEW",
        "-lGL",
    ],
    defines = ROCM_HIP_DEFINES,
    visibility = ["//visibility:public"],
    deps = (
      ["//src/gpu:gpu_runtime", ":image_utils", ":gl_window", "//src/pano:cuda_matrix", "@opencv_linux//:opencv"]
      + select({
        "@//:use_hip": [
          "@local_rocm//:rocm_sdk_core",
          "@local_rocm//:amdhip64",
        ],
        "@//:use_vulkan": [],
        "//conditions:default": ["@local_cuda//:cuda_runtime"],
      })
    ),
)

# Headers used by HIP genrule to construct a virtual include tree
filegroup(
    name = "utils_public_headers",
    srcs = [
        "cudaBlendShow.h",
        "cudaGLWindow.h",
        "imageUtils.h",
        "showImage.h",
    ],
    visibility = ["//visibility:public"],
)
